--- a/Week_1/Python_basics/python_basics.ipynb
+++ b/Week_1/Python_basics/python_basics.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
       "Subtraction         10 - 3 = 7\n",
       "Addition            10 + 3 = 13\n",
       "Multiplication      10 * 3 = 30\n",
-      "Division            10 / 3 = 3.33\n",
+      "Division            10 / 3 = 3.333333333333333481363070\n",
       "Floor Division      10 // 3 = 3\n",
       "Remainder           10 % 3 = 1\n",
       "Exponentiation      10 ** 3 = 1000\n"
@@ -102,7 +102,7 @@
     "print(f\"Subtraction         {a} - {b} = {a - b}\")\n",
     "print(f\"Addition            {a} + {b} = {a + b}\")\n",
     "print(f\"Multiplication      {a} * {b} = {a * b}\")\n",
-    "print(f\"Division            {a} / {b} = {a / b:.2f}\")  # Display division result up to 2 decimal places\n",
+    "print(f\"Division            {a} / {b} = {a / b:.24f}\")  # Display division result up to 24 decimal places (and we can see the round off error)\n",
     "print(f\"Floor Division      {a} // {b} = {a // b}\")    # Integer division result\n",
     "print(f\"Remainder           {a} % {b} = {a % b}\")      # Remainder after division\n",
     "print(f\"Exponentiation      {a} ** {b} = {a ** b}\")    # Exponential calculation\n"
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,6 +233,21 @@
     "print(\"Elements from index 4 to the end:\", fruits[4:])  # Elements from index 2 onwards\n",
     "print(\"Every second element starting from index 1:\", fruits[1::2])  # Every second element starting at index 1\n",
     "print(\"Last element as a slice:\", fruits[-1:])  # Last element using slicing\n",
+    "\n",
+    "#what is the fundamental Mechanism based on which this slicing works, and why does it seem so random.\n",
+    "#Turns out, everything was very intentional: \n",
+    "#list[start:end] = take the element at the start index, till the element at the end index, but dont include the element at the end index. \n",
+    "#That last design choise allows these beautiful things. \n",
+    "#len(lst[start:end]) == end - start. This statement is always true. \n",
+    "\n",
+    "#a = lst[:k]\n",
+    "#b = lst[k:]\n",
+    "#a + b == lst. thats it, you can just add them. \n",
+    "\n",
+    "#when you write this: lst[:]    # that means the whole list. whole list\n",
+    "#Python says: the start index is missing, lets assume its the first (0th) element. and if the end index is missing, then its the last element\n",
+    "\n",
+    "#negetive indexes exist simply, because we can we humans sometimes count from the back. \n",
     "\n",
     "# 4. Modifying an element\n",
     "fruits[1] = \"blueberry\"  # Update the second element\n",
@@ -533,27 +548,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def print_spiral_order(matrix):\n",
-    "    # TODO\n",
-    "    return None # default code"
+    "    if not matrix or not matrix[0]:\n",
+    "        return []\n",
+    "\n",
+    "    result = []\n",
+    "\n",
+    "    top, bottom = 0, len(matrix) - 1\n",
+    "    left, right = 0, len(matrix[0]) - 1\n",
+    "\n",
+    "    while top <= bottom and left <= right:\n",
+    "\n",
+    "        # 1. top row\n",
+    "        result.extend(matrix[top][left:right+1])\n",
+    "        top += 1\n",
+    "\n",
+    "        # 2. right column\n",
+    "        for row in range(top, bottom + 1):\n",
+    "            result.append(matrix[row][right])\n",
+    "        right -= 1\n",
+    "\n",
+    "        if top <= bottom:\n",
+    "            # 3. bottom row (reverse)\n",
+    "            result.extend(matrix[bottom][left:right+1][::-1])\n",
+    "            bottom -= 1\n",
+    "\n",
+    "        if left <= right:\n",
+    "            # 4. left column (reverse)\n",
+    "            for row in range(bottom, top - 1, -1):\n",
+    "                result.append(matrix[row][left])\n",
+    "            left += 1\n",
+    "\n",
+    "    return (result)\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Case 1 Output: None\n",
-      "Test Case 2 Output: None\n",
-      "Test Case 3 Output: None\n",
+      "Test Case 1 Output: [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
+      "Test Case 2 Output: [1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10]\n",
+      "Test Case 3 Output: [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12, 13]\n",
       " Test Case 1 Expected Output: [1, 2, 3, 6, 9, 8, 7, 4, 5]\n",
       "Test Case 2 Expected Output: [1, 2, 3, 4, 8, 12, 16, 15, 14, 13, 9, 5, 6, 7, 11, 10]\n",
       "Test Case 3 Expected Output: [1, 2, 3, 4, 5, 10, 15, 20, 25, 24, 23, 22, 21, 16, 11, 6, 7, 8, 9, 14, 19, 18, 17, 12, 13]\n",
@@ -601,23 +646,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6    18   15   5    12   13   7    14   10   \n",
-      "10   14   15   15   13   3    10   18   4    \n",
-      "2    13   11   2    7    5    15   17   5    \n",
-      "5    16   12   10   7    9    17   14   13   \n",
-      "8    15   18   11   1    1    4    19   4    \n",
-      "6    19   18   0    0    1    13   4    7    \n",
-      "14   5    18   18   5    5    11   5    9    \n",
-      "3    7    3    9    1    7    1    6    18   \n",
-      "6    18   3    19   11   16   16   15   6    \n"
+      "5    15   1    17   11   11   \n",
+      "3    8    6    2    6    16   \n",
+      "15   14   4    17   13   3    \n",
+      "1    13   6    17   15   4    \n",
+      "15   10   14   12   4    2    \n",
+      "0    16   13   0    12   4    \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -631,7 +683,7 @@
     "    print(\"\")\n",
     "\n",
     "# You can treat the numpy array as a list in python (for now)\n",
-    "print_spiral_order(arr)"
+    "print_spiral_order(arr.all())"
    ]
   },
   {
@@ -660,18 +712,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_word_frequency(sentence):\n",
-    "    # TODO\n",
-    "    return {} # Returning empty dictionary on default"
+    "def count_word_frequency(s):\n",
+    "    counts = {}\n",
+    "\n",
+    "    words = s.split()   # splits on whitespace\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in counts:\n",
+    "            counts[word] += 1\n",
+    "        else:\n",
+    "            counts[word] = 1\n",
+    "\n",
+    "    return counts\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -680,23 +741,23 @@
      "text": [
       "Test Case 1:\n",
       "Input: Hello world Hello\n",
-      "Output: {}\n",
+      "Output: {'Hello': 2, 'world': 1}\n",
       "------------------------------\n",
       "Test Case 2:\n",
       "Input: Python is fun and Python is easy\n",
-      "Output: {}\n",
+      "Output: {'Python': 2, 'is': 2, 'fun': 1, 'and': 1, 'easy': 1}\n",
       "------------------------------\n",
       "Test Case 3:\n",
       "Input: One fish two fish red fish blue fish\n",
-      "Output: {}\n",
+      "Output: {'One': 1, 'fish': 4, 'two': 1, 'red': 1, 'blue': 1}\n",
       "------------------------------\n",
       "Test Case 4:\n",
       "Input: This is a test. This test is simple.\n",
-      "Output: {}\n",
+      "Output: {'This': 2, 'is': 2, 'a': 1, 'test.': 1, 'test': 1, 'simple.': 1}\n",
       "------------------------------\n",
       "Test Case 5:\n",
       "Input: Repeat repeat Repeat\n",
-      "Output: {}\n",
+      "Output: {'Repeat': 2, 'repeat': 1}\n",
       "------------------------------\n",
       "Test Case 6:\n",
       "Input: \n",
@@ -704,7 +765,7 @@
       "------------------------------\n",
       "Test Case 7:\n",
       "Input: Spaces       between      words\n",
-      "Output: {}\n",
+      "Output: {'Spaces': 1, 'between': 1, 'words': 1}\n",
       "------------------------------\n"
      ]
     }
@@ -767,29 +828,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_iterative(s):\n",
-    "    # TODO\n",
-    "    return None"
+    "    left = 0\n",
+    "    right = len(s) - 1\n",
+    "\n",
+    "    while left < right:\n",
+    "        if s[left] != s[right]:\n",
+    "            return False\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "\n",
+    "    return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_recursive(s):\n",
-    "    # TODO\n",
-    "    return None"
+    "    if len(s) <= 1:\n",
+    "        return True\n",
+    "\n",
+    "    if s[0] != s[-1]:\n",
+    "        return False\n",
+    "\n",
+    "    return is_palindrome_recursive(s[1:-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -797,46 +871,46 @@
      "output_type": "stream",
      "text": [
       "Test Case 1: Input = 'radar'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 2: Input = 'boommoob'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 3: Input = 'world'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: False\n",
+      "  Recursive Output: False\n",
       "  Expected Output: False\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 4: Input = 'a'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 5: Input = ''\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: True\n",
+      "  Recursive Output: True\n",
       "  Expected Output: True\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n",
       "Test Case 6: Input = 'RadAr'\n",
-      "  Iterative Output: None\n",
-      "  Recursive Output: None\n",
+      "  Iterative Output: False\n",
+      "  Recursive Output: False\n",
       "  Expected Output: False\n",
-      "  Iterative Pass: False\n",
-      "  Recursive Pass: False\n",
+      "  Iterative Pass: True\n",
+      "  Recursive Pass: True\n",
       "------------------------------\n"
      ]
     }
@@ -901,18 +975,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
-    "    # TODO\n",
-    "    return None"
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    if n == 2:\n",
+    "        return True\n",
+    "    if n % 2 == 0:\n",
+    "        return False\n",
+    "\n",
+    "    i = 3\n",
+    "    while i * i <= n:\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "        i += 2\n",
+    "\n",
+    "    return True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -920,54 +1006,54 @@
      "output_type": "stream",
      "text": [
       "Test Case 1: Input = 2\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 2: Input = 3\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 3: Input = 4\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 4: Input = 17\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 5: Input = 19\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 6: Input = 20\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 7: Input = 1\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 8: Input = 0\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 9: Input = -5\n",
-      "  Output: None\n",
+      "  Output: False\n",
       "  Expected Output: False\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n",
       "Test Case 10: Input = 97\n",
-      "  Output: None\n",
+      "  Output: True\n",
       "  Expected Output: True\n",
-      "  Pass: False\n",
+      "  Pass: True\n",
       "------------------------------\n"
      ]
     }
@@ -996,11 +1082,20 @@
     "    print(f\"  Pass: {result == expected}\")\n",
     "    print(\"-\" * 30)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#done"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1014,7 +1109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
