--- a/Week_1/Python_libraries/Numpy/numpy_basics.ipynb
+++ b/Week_1/Python_libraries/Numpy/numpy_basics.ipynb
@@ -41,9 +41,9 @@
       "Range Array: [0 2 4 6 8]\n",
       "Linspace Array: [0.   0.25 0.5  0.75 1.  ]\n",
       "Random Array:\n",
-      " [[0.20862537 0.05008008 0.60450592]\n",
-      " [0.15058016 0.29360468 0.73718961]\n",
-      " [0.19184243 0.98138688 0.86458117]]\n"
+      " [[0.22726566 0.80603218 0.7205018 ]\n",
+      " [0.91382461 0.35310776 0.88025266]\n",
+      " [0.68231705 0.74755598 0.81045697]]\n"
      ]
     }
    ],
@@ -324,11 +324,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 0.005250180993262305\n",
+      "25th Percentile: -0.6522549792978122\n",
+      "75th Percentile: 0.651029416784911\n",
+      "25th Percentile: -0.6522549792978122\n",
+      "75th Percentile: 0.651029416784911\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# TODO\n",
+    "data = np.random.normal(0, 1, 1000)\n",
+    "mean = np.mean(data)\n",
+    "percentile_25 = np.percentile(data, 25)\n",
+    "percentile_75 = np.percentile(data, 75)\n",
+    "print(\"Mean:\", mean)\n",
+    "print(\"25th Percentile:\", percentile_25)\n",
+    "print(\"75th Percentile:\", percentile_75)\n",
+    "print(\"25th Percentile:\", percentile_25)\n",
+    "print(\"75th Percentile:\", percentile_75)    "
    ]
   },
   {
@@ -357,18 +378,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data: [ 6 12  9  6  8  4  6  6  8  6  1  6  2  4  6  6  5  8  6  4]\n",
+      "Mean: 5.95\n",
+      "Standard Deviation: 2.3553131426627756\n",
+      "Centered and Normalized Data: [ 0.0212286   2.56866057  1.29494458  0.0212286   0.87037259 -0.82791539\n",
+      "  0.0212286   0.0212286   0.87037259  0.0212286  -2.10163138  0.0212286\n",
+      " -1.67705938 -0.82791539  0.0212286   0.0212286  -0.4033434   0.87037259\n",
+      "  0.0212286  -0.82791539]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO\n",
-    "# Hint use np.random.poisson"
+    "# Hint use np.random.poisson\n",
+    "data = np.random.poisson(lam=5, size=20)\n",
+    "mean = np.mean(data)\n",
+    "std_dev = np.std(data)\n",
+    "centered_normalized_data = (data - mean) / std_dev\n",
+    "print(\"Original Data:\", data)\n",
+    "print(\"Mean:\", mean)\n",
+    "print(\"Standard Deviation:\", std_dev)\n",
+    "print(\"Centered and Normalized Data:\", centered_normalized_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
